# beadsprite_helper

./: .gitignore  CLAUDE.md  LICENSE  README.md  instructions.md  serve-local.sh  start-dev.sh
.github/workflows/: deploy.yml
backend/: .gitignore  main.py  pyproject.toml
backend/data/: perler_colors.json
backend/routers/: __init__.py  colors.py  images.py
backend/services/: color_utils.py  grid_detection.py  pixel_extraction.py
backend/tests/: test_color_utils.py  test_pixel_extraction.py
backend/utils/: logging_config.py
docs/plans/: 2025-10-30-beadsprite-helper-design.md  2025-10-31-beadsprite-mvp-continuation.md  2025-10-31-browser-only-refactor-design.md  2025-10-31-browser-only-refactor-implementation.md  2025-11-01-background-detection-design.md  2025-11-01-export-import-design.md  2025-11-02-labeled-pdf-export-design.md  2025-11-02-labeled-pdf-export-implementation.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CanvasPixelGrid.jsx  ColorMappingDisplay.jsx  ColorPalette.jsx  GridAdjustmentControls.jsx  ImageDisplay.jsx  ImageUploadZone.jsx  LabeledPatternRenderer.jsx  PatternExportControls.jsx  PatternRenderer.jsx  PixelGridDisplay.jsx  ProjectControls.jsx
frontend/src/data/: perlerColors.js
frontend/src/services/: api.js  backgroundDetector.js  colorMapper.js  imageProcessor.js  patternExporter.js  projectExporter.js
frontend/src/stores/: inventoryStore.js  paletteStore.js  projectStore.js  uiStore.js
frontend/src/utils/: colorUtils.js  (+1 more)
(+4 files in other folders)
